--- a/main.html
+++ b/main.html
@@ -3,14 +3,11 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<!-- PLease only edit this file for this asssignment. Thanks!-->
+	<h1>"Hello World" </h1>
 </body>
 
 </html>
